@@ -26,3 +26,4 @@ Version 1.03 trunk
 - Removed incorrect closing anchor tag on item titles.
 - Work around HTML Purifier comment insertion / template issue (Smarty evaluates comments in an otherwise empty field as TRUE)
 - Fixed search function bug that was crashing profile views.
+- Search now examines the creator, extended_text and publisher fields (in addition to title and description)
